--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
-spring.datasource.url=jdbc:mysql://localhost:3306/my_movie_plan
+spring.datasource.url=jdbc:mysql://localhost:3306/my_movie_plan?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 tokenSecret=mymovieplan
+
+project.image=D:\\SpringToolSuiteProjects\\TrainingProject\\images
