Updated for better return values

--- a/src/main/resources/TheaterValidationMessages.properties
+++ b/src/main/resources/TheaterValidationMessages.properties
@@ -1,2 +1,4 @@
 theater.already.exists = The theater already exists. Please enter different theater name.
 theater.not.found = The theater is not found. Please enter different theater.
+
+theater.delete.success = Theater deleted successfully!
